// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single booking timeline query should not accept database id 1`] = `
Object {
  "data": Object {
    "bookingTimeline": null,
  },
  "errors": Array [
    [GraphQLError: Booking ID mishmash. You cannot query Booking with ID '2707251' because this ID is not ID of the Booking. Please use opaque ID of the Booking.],
  ],
}
`;

exports[`single booking timeline query should work with opaque Booking id (terminal included) 1`] = `
Object {
  "data": Object {
    "bookingTimeline": Object {
      "events": Array [
        Object {
          "__typename": "BookedFlightTimelineEvent",
          "timestamp": "2017-03-30T07:24:24.000Z",
        },
        Object {
          "__typename": "BookingConfirmedTimelineEvent",
          "timestamp": "2017-03-30T07:24:24.000Z",
        },
        Object {
          "__typename": "PaymentConfirmedTimelineEvent",
          "timestamp": "2017-03-30T07:24:24.000Z",
        },
        Object {
          "__typename": "DownloadInvoiceTimelineEvent",
          "invoiceUrl": "https://booking.skypicker.com/api/v0.1/get_file/2707224?file_id=317024120&simple_token=c3f29dd0-18a7-4062-9162-b58f4022fc70",
          "legs": Array [
            Object {
              "arrival": Object {
                "airport": Object {
                  "city": Object {
                    "name": "Mocked City Name",
                  },
                },
              },
              "departure": Object {
                "airport": Object {
                  "city": Object {
                    "name": "Mocked City Name",
                  },
                },
              },
            },
          ],
          "numberPassengers": 1,
          "timestamp": "2017-03-30T07:24:24.000Z",
        },
        Object {
          "__typename": "DownloadETicketTimelineEvent",
          "ticketUrl": "https://skypicker-mailing.s3.amazonaws.com/2707/1490858789_E-ticket_passenger_02a172055788d052b0cc7870905b9701.pdf?v=1490858789",
          "timestamp": "2017-03-30T07:24:24.000Z",
        },
        Object {
          "__typename": "NoMoreEditsTimelineEvent",
          "timestamp": "2017-08-16T22:05:00.000Z",
        },
        Object {
          "__typename": "LeaveForAirportTimelineEvent",
          "timestamp": "2017-08-18T18:05:00.000Z",
        },
        Object {
          "__typename": "AirportArrivalTimelineEvent",
          "location": Object {
            "airport": Object {
              "city": Object {
                "locationId": null,
                "name": "Mocked City Name",
                "slug": null,
              },
            },
          },
          "timestamp": "2017-08-18T20:05:00.000Z",
        },
        Object {
          "__typename": "BoardingTimelineEvent",
          "terminal": "1",
          "timestamp": "2017-08-18T21:35:00.000Z",
        },
        Object {
          "__typename": "DownloadBoardingPassTimelineEvent",
          "timestamp": "2017-08-18T22:05:00.000Z",
        },
        Object {
          "__typename": "DepartureTimelineEvent",
          "airline": Object {
            "code": "OK",
            "name": "Czech Airlines",
          },
          "duration": 215,
          "flightNumber": 910,
          "location": Object {
            "airport": Object {
              "city": Object {
                "name": "Mocked City Name",
              },
            },
          },
          "timestamp": "2017-08-18T22:05:00.000Z",
        },
        Object {
          "__typename": "ArrivalTimelineEvent",
          "location": Object {
            "airport": Object {
              "city": Object {
                "locationId": null,
                "name": "Mocked City Name",
                "slug": null,
              },
            },
          },
          "timestamp": "2017-08-19T03:40:00.000Z",
        },
        Object {
          "__typename": "TransportFromAirportTimelineEvent",
          "timestamp": "2017-08-19T03:55:00.000Z",
        },
      ],
    },
  },
}
`;

exports[`single booking timeline query should work with opaque Booking id 1`] = `
Object {
  "data": Object {
    "bookingTimeline": Object {
      "events": Array [
        Object {
          "__typename": "BookedFlightTimelineEvent",
          "timestamp": "2017-03-30T07:28:55.000Z",
        },
        Object {
          "__typename": "BookingConfirmedTimelineEvent",
          "timestamp": "2017-03-30T07:28:55.000Z",
        },
        Object {
          "__typename": "PaymentConfirmedTimelineEvent",
          "timestamp": "2017-03-30T07:28:55.000Z",
        },
        Object {
          "__typename": "DownloadInvoiceTimelineEvent",
          "invoiceUrl": null,
          "legs": Array [
            Object {
              "arrival": Object {
                "airport": Object {
                  "city": Object {
                    "name": "Mocked City Name",
                  },
                },
              },
              "departure": Object {
                "airport": Object {
                  "city": Object {
                    "name": "Mocked City Name",
                  },
                },
              },
            },
          ],
          "numberPassengers": 2,
          "timestamp": "2017-03-30T07:28:55.000Z",
        },
        Object {
          "__typename": "DownloadETicketTimelineEvent",
          "ticketUrl": "https://skypicker-mailing.s3.amazonaws.com/2707/1490859068_E-ticket_passenger_and_1_more_e826fc3275a65a5db8808279d8fc7f8f.pdf?v=1490859069",
          "timestamp": "2017-03-30T07:28:55.000Z",
        },
        Object {
          "__typename": "EnterDetailsTimelineEvent",
          "timestamp": "2016-12-21T23:36:07.071Z",
        },
        Object {
          "__typename": "NoMoreEditsTimelineEvent",
          "timestamp": "2017-09-07T21:10:00.000Z",
        },
        Object {
          "__typename": "LeaveForAirportTimelineEvent",
          "timestamp": "2017-09-09T17:10:00.000Z",
        },
        Object {
          "__typename": "AirportArrivalTimelineEvent",
          "location": Object {
            "airport": Object {
              "city": Object {
                "locationId": null,
                "name": "Mocked City Name",
                "slug": null,
              },
            },
          },
          "timestamp": "2017-09-09T19:10:00.000Z",
        },
        Object {
          "__typename": "BoardingTimelineEvent",
          "terminal": null,
          "timestamp": "2017-09-09T20:40:00.000Z",
        },
        Object {
          "__typename": "DownloadBoardingPassTimelineEvent",
          "timestamp": "2017-09-09T21:10:00.000Z",
        },
        Object {
          "__typename": "DepartureTimelineEvent",
          "airline": Object {
            "code": "VY",
            "name": "Vueling",
          },
          "duration": 80,
          "flightNumber": 8773,
          "location": Object {
            "airport": Object {
              "city": Object {
                "name": "Mocked City Name",
              },
            },
          },
          "timestamp": "2017-09-09T21:10:00.000Z",
        },
        Object {
          "__typename": "ArrivalTimelineEvent",
          "location": Object {
            "airport": Object {
              "city": Object {
                "locationId": null,
                "name": "Mocked City Name",
                "slug": null,
              },
            },
          },
          "timestamp": "2017-09-09T23:30:00.000Z",
        },
        Object {
          "__typename": "TransportFromAirportTimelineEvent",
          "timestamp": "2017-09-09T23:45:00.000Z",
        },
      ],
    },
  },
}
`;
